--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -1,10 +1,15 @@
+.TodoListItem-virtualized {
+    &+& {
+        border-top: 1px solid #dee2e6;
+    }
+    &:nth-child(even) {
+        background-color: #f8f9fa;
+    }
+}
 .TodoListItem {
     padding: 1rem;
     display: flex;
     align-items: center;
-    &:nth-child(even) {
-        background-color: #f8f9fa;
-    }
     .checkbox {
         cursor: pointer;
         flex: 1;
@@ -36,9 +41,5 @@
         &:hover {
             color: #ff8787;
         }
-    }
-
-    &+& {
-        border-top: 1px solid #dee2e6;
     }
 }
